--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 *.db-shm
 /TripPlanner.Api/.vs/TripPlanner.Api/CopilotIndices/17.14.995.13737/CodeChunks.db-wal
 /TripPlanner.Api/.vs/TripPlanner.Api/CopilotIndices/17.14.995.13737/SemanticSymbols.db-wal
+/TripPlanner.Api/.vs/TripPlanner.Api/FileContentIndex/5949b594-edb7-4e5c-a2c0-460007dba485.vsidx
+/TripPlanner.Api/.vs/TripPlanner.Api/FileContentIndex/893600b9-54f4-4b08-a1cc-61c7e0bd7c1e.vsidx
